--- a/index.html
+++ b/index.html
@@ -19,20 +19,27 @@
       <div class="box" id="bx2"><br><br><br><br><br>
         <label>Scholar No:</label>
       <input type="text" id="username" name="username" placeholder="Enter you Scholar-ID" required><br><br>
+      <!-- Class Dropdown -->
 <label for="class">Class:</label>
 <select name="class" required>
     <option value="9th">9th</option>
     <option value="10th">10th</option>
     <option value="11th">11th</option>
     <option value="12th">12th</option>
+    <!-- Add more class options as needed -->
 </select><br>
+
+<!-- Section Dropdown -->
 <label for="section">Section:</label>
 <select name="section" required>
     <option value="A">A</option>
     <option value="B">B</option>
     <option value="C">C</option>
     <option value="D">D</option>
-</select><br><br>
+    <!-- Add more section options as needed -->
+</select><br>
+
+      <br>
       <button type="submit">Login</button>
       </div>    
     </form>
