--- a/form.html
+++ b/form.html
@@ -1,41 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Access Database Form</title>
+    <title>Student Information Form</title>
 </head>
 <body>
-    <h1>Data Entry Form</h1>
-    <form id="dataForm">
+    <h1>Student Information Form</h1>
+    <form id="studentForm">
         <label for="name">Name:</label>
-        <input type="text" id="name" name="name"><br><br>
+        <input type="text" id="name" name="name" required><br><br>
+
+        <label for="class">Class:</label>
+        <input type="text" id="class" name="class" required><br><br>
+
+        <label for="section">Section:</label>
+        <input type="text" id="section" name="section" required><br><br>
 
         <label for="email">Email:</label>
-        <input type="text" id="email" name="email"><br><br>
+        <input type="email" id="email" name="email" required><br><br>
 
-        <input type="button" value="Submit" onclick="submitData()">
+        <input type="submit" value="Submit">
     </form>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
 
-    <script>
-        function submitData() {
-            try {
-                var conn = new ActiveXObject("ADODB.Connection");
-                var connStr = "Provider=Microsoft.ACE.OLEDB.12.0;Data Source=/home/vinesh/Documents/Database1.accdb;";
-
-                conn.Open(connStr);
-
-                var rs = new ActiveXObject("ADODB.Recordset");
-                rs.Open("INSERT INTO TableName (Name, Email) VALUES ('" + document.getElementById('name').value + "', '" + document.getElementById('email').value + "')", conn);
-
-                rs.Close();
-                conn.Close();
-
-                alert("Data successfully submitted!");
-                document.getElementById('name').value = '';
-                document.getElementById('email').value = '';
-            } catch (e) {
-                alert("An error occurred: " + e.message);
-            }
-        }
-    </script>
+    <script src="app.js"></script>
 </body>
 </html>
