--- a/signup.html
+++ b/signup.html
@@ -135,7 +135,7 @@
     </form>
 </div>
 <script>
-const scriptURL = "https://script.google.com/macros/s/AKfycbyol1ISh_axaR1qhegZHTpBAb__qy9W29YsQPpB4daweArhAwVjuoDsT8nAbw9BcWM3jg/exec";
+            const scriptURL = 'https://script.google.com/macros/s/AKfycbyPsfBSclMmrXPcpw8AjeiHlyKx8SZI0bBNj-OVNzenZ-AjpvPd2Lb5D1p-fQv1tn-cQw/exec';
 const form = document.forms['login-form'];
 
 function doPost(e) {
