--- a/c9sB.html
+++ b/c9sB.html
@@ -3,211 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="style2.css">
-    <title>Voting Page</title>
+    <title>Google Sheets Data</title>
+    <style>
+        table {
+            border-collapse: collapse;
+            width: 100%;
+        }
+        th, td {
+            border: 1px solid #dddddd;
+            text-align: left;
+            padding: 8px;
+        }
+        tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+    </style>
 </head>
 <body>
-<div class="box" id="top">
-    <h1>Medi-Caps International School</h1>
-</div>
-<center>
-    <h1>Teacher Rating</h1>
-</center>
-<form id="login-form" name="login-form">
-    <div id="votingContainer">
-        <div id="optionsContainer">
-            <div class="box-wrapper">
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="box" id="box1">
-                    <h3 class="heading-wrapper">
+    <h1>Data from Google Sheet</h1>
+    <table id="dataTable">
+        <thead>
+            <!-- Table header rows will be added here -->
+        </thead>
+        <tbody>
+            <!-- Table content rows will be added here -->
+        </tbody>
+    </table>
 
-                        <!-- First Box -->
-                        <span class="text1">XYZ</span>
-                    </h3>
-                    <h2>&nbsp;&nbsp; Behavior <span class="emoji-button" onclick="vote(this)" id="1">&#x1F600;</span> <span class="emoji-button" id="2" onclick="vote(this)">&#128578; &nbsp;</span><span class="emoji-button" onclick="vote(this)" id="3">&#128532;</span> <span class="emoji-button" id="4" onclick="vote(this)">&#128544;</span></h2>
-                    <h2>&nbsp;&nbsp; Teaching <span class="emoji-button" onclick="vote(this)" id="1">&#x1F600;</span> <span class="emoji-button" id="2" onclick="vote(this)">&#128578; &nbsp;</span><span class="emoji-button" onclick="vote(this)" id="3">&#128532;</span> <span class="emoji-button" id="4" onclick="vote(this)">&#128544;</span></h2>
-                    <h2>&nbsp;&nbsp; Working <span class="emoji-button" onclick="vote(this)" id="1">&#x1F600;</span> <span class="emoji-button" id="2" onclick="vote(this)">&#128578; &nbsp;</span><span class="emoji-button" onclick="vote(this)" id="3">&#128532;</span> <span class="emoji-button" id="4" onclick="vote(this)">&#128544;</span></h2>
-                    <div class="textbox-container ">                        <div class="word-count">0 / 100</div>
-                        <textarea class="word-limit-textarea" rows="6" cols="50" maxlength="500" required></textarea>
-                    </div>
-                </div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <script>
+        // Replace 'YOUR_API_KEY' with your Google Cloud API key
+        const apiKey = 'AIzaSyCmXgRHudSZo-nE_ZY0ehyST9TYGVsSeeE';
 
-                <!-- Second Box -->
-                <div class="box" id="box2">
-                    <h3 class="heading-wrapper">
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span class="text2">ABC</span>
-                    </h3>
-                    <h2>&nbsp;&nbsp; Behavior <span class="emoji-button" onclick="vote(this)" id="1">&#x1F600;</span> <span class="emoji-button" id="2" onclick="vote(this)">&#128578; &nbsp;</span><span class="emoji-button" onclick="vote(this)" id="3">&#128532;</span> <span class="emoji-button" id="4" onclick="vote(this)">&#128544;</span></h2>
-                    <h2>&nbsp;&nbsp; Teaching <span class="emoji-button" onclick="vote(this)" id="1">&#x1F600;</span> <span class="emoji-button" id="2" onclick="vote(this)">&#128578; &nbsp;</span><span class="emoji-button" onclick="vote(this)" id="3">&#128532;</span> <span class="emoji-button" id="4" onclick="vote(this)">&#128544;</span></h2>
-                    <h2>&nbsp;&nbsp; Working <span class="emoji-button" onclick="vote(this)" id="1">&#x1F600;</span> <span class="emoji-button" id="2" onclick="vote(this)">&#128578; &nbsp;</span><span class="emoji-button" onclick="vote(this)" id="3">&#128532;</span> <span class="emoji-button" id="4" onclick="vote(this)">&#128544;</span></h2>
-                    <div class="textbox-container">
-                        <div class="word-count">0 / 100</div>
-                        <textarea class="word-limit-textarea" rows="6" cols="50" maxlength="500" required></textarea>
-                    </div>
-                </div><br><br><br>
+        // Replace 'YOUR_SPREADSHEET_ID' with your Google Sheet ID
+        const spreadsheetId = 'AKfycbz_wtIuxovVnuiffvcOiv0SCE7ILZdkpnEFE_KJucXa8_pvfKnHMWjhMjr2wnvS9oZe';
 
-                <!-- Third Box -->
-                <div class="box-wrapper">
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="box" id="box4">
-                        <h3 class="heading-wrapper">
-                            <span class="text1">XaZ</span>
-                        </h3>
-                        <h2>&nbsp;&nbsp; Behavior <span class="emoji-button" onclick="vote(this)" id="1">&#x1F600;</span> <span class="emoji-button" id="2" onclick="vote(this)">&#128578; &nbsp;</span><span class="emoji-button" onclick="vote(this)" id="3">&#128532;</span> <span class="emoji-button" id="4" onclick="vote(this)">&#128544;</span></h2>
-                    <h2>&nbsp;&nbsp; Teaching <span class="emoji-button" onclick="vote(this)" id="1">&#x1F600;</span> <span class="emoji-button" id="2" onclick="vote(this)">&#128578; &nbsp;</span><span class="emoji-button" onclick="vote(this)" id="3">&#128532;</span> <span class="emoji-button" id="4" onclick="vote(this)">&#128544;</span></h2>
-                    <h2>&nbsp;&nbsp; Working <span class="emoji-button" onclick="vote(this)" id="1">&#x1F600;</span> <span class="emoji-button" id="2" onclick="vote(this)">&#128578; &nbsp;</span><span class="emoji-button" onclick="vote(this)" id="3">&#128532;</span> <span class="emoji-button" id="4" onclick="vote(this)">&#128544;</span></h2>
-                        <div class="textbox-container">
-                            <div class="word-count">0 / 100</div>
-                            <textarea class="word-limit-textarea" rows="6" cols="50" maxlength="500" required></textarea>
-                        </div>
-                    </div>
+        // Replace 'SHEET_NAME' with the name of your sheet (usually 'Sheet1')
+        const sheetName = 'Sheet1';
 
-                    <!-- Fourth Box -->
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="box" id="box3">
-                        <h3 class="heading-wrapper">
-                            <span class="text1">XSZ</span>
-                        </h3>
-                        <h2>&nbsp;&nbsp; Behavior <span class="emoji-button" onclick="vote(this)" id="1">&#x1F600;</span> <span class="emoji-button" id="2" onclick="vote(this)">&#128578; &nbsp;</span><span class="emoji-button" onclick="vote(this)" id="3">&#128532;</span> <span class="emoji-button" id="4" onclick="vote(this)">&#128544;</span></h2>
-                    <h2>&nbsp;&nbsp; Teaching <span class="emoji-button" onclick="vote(this)" id="1">&#x1F600;</span> <span class="emoji-button" id="2" onclick="vote(this)">&#128578; &nbsp;</span><span class="emoji-button" onclick="vote(this)" id="3">&#128532;</span> <span class="emoji-button" id="4" onclick="vote(this)">&#128544;</span></h2>
-                    <h2>&nbsp;&nbsp; Working <span class="emoji-button" onclick="vote(this)" id="1">&#x1F600;</span> <span class="emoji-button" id="2" onclick="vote(this)">&#128578; &nbsp;</span><span class="emoji-button" onclick="vote(this)" id="3">&#128532;</span> <span class="emoji-button" id="4" onclick="vote(this)">&#128544;</span></h2>
-                        <div class="textbox-container">
-                            <div class="word-count">0 / 100</div>
-                            <textarea class="word-limit-textarea" rows="6" cols="50" maxlength="500" required></textarea>
-                        </div>
-                    </div>
-                    <center><br><br>
-                        <button type="submit" onclick="submitVote()">Submit</button>
-                    </center>
-                </div>
-            </div>
-        </div>
-    </div>
-</form>
-</center>
-</div>
-<div class="box" id="btm1">
-    <center>
-        <h1>Developed by Vinesh Katara of X-C</h1>
-    </center>
-</div>
-<script>
-    const scriptURL = "https://script.google.com/macros/s/AKfycbx3UyH-5WQUxk5AmZCFtk1daqVGtwARlzv87o75t4l696PeU3zbsieIsFJK0F7p2d-92A/exec"
-    const form = document.forms['login-form']
+        // Create the URL to fetch data from Google Sheets API
+        const apiUrl = `https://sheets.googleapis.com/v4/spreadsheets/${spreadsheetId}/values/${sheetName}?key=${apiKey}`;
 
-    form.addEventListener('submit', e => {
-        e.preventDefault()
-        fetch(scriptURL, { method: 'POST', body: new FormData(form) })
-            .then(response => alert('Success!', response))
-            .catch(error => alert('Error!', error.message))
-    })
+        // Fetch data from Google Sheets API
+        fetch(apiUrl)
+            .then(response => response.json())
+            .then(data => {
+                const table = document.getElementById('dataTable');
+                const [headerRow, ...rows] = data.values;
 
-    function submitVote() {
-        const selectedOptionBoy = document.querySelector('input[name="head-boy"]:checked');
-        const selectedOptionGirl = document.querySelector('input[name="head-girl"]:checked');
+                // Create table header row
+                const thead = document.createElement('thead');
+                const headerRowElement = document.createElement('tr');
+                headerRow.forEach(header => {
+                    const th = document.createElement('th');
+                    th.textContent = header;
+                    headerRowElement.appendChild(th);
+                });
+                thead.appendChild(headerRowElement);
+                table.appendChild(thead);
 
-        if (selectedOptionBoy && selectedOptionGirl) {
-            const selectedValueBoy = selectedOptionBoy.value;
-            const selectedValueGirl = selectedOptionGirl.value;
-            vote(selectedValueBoy);
-            vote(selectedValueGirl);
-            window.location.href = 'thank.html';
-        } else {
-            alert('Please select an option for both Head Boy and Head Girl.');
-        }
-    }
-
-    // JavaScript code to handle emoji button clicks
-function vote(emoji) {
-    const buttons = emoji.parentElement.querySelectorAll('.emoji-button');
-    const row = emoji.closest('.box-wrapper');
-    
-    buttons.forEach(button => button.classList.remove('clicked'));
-    emoji.classList.add('clicked');
-
-    
-    }
-
-// Function to submit the vote
-function submitVote() {
-    const totalEmojiButtons = document.querySelectorAll('.emoji-button').length;
-    const selectedEmojis = document.querySelectorAll('.emoji-button.clicked');
-
-    if (selectedEmojis.length === 12) {
-        // You can process the selected emojis here
-        window.location.href = 'thank.html';
-    } else {
-        alert('Please select an emoji for each category.');
-    }
-}
-
-
-    // Get all textarea elements with the class "word-limit-textarea"
-    const textareas = document.querySelectorAll('.word-limit-textarea');
-
-    // Add an input event listener to each textarea
-    textareas.forEach(textarea => {
-        const wordCountDisplay = textarea.previousElementSibling; // Get the word count display element
-
-        textarea.addEventListener('input', function () {
-            // Get the current text from the textarea
-            const text = this.value;
-
-            // Split the text into words (split by spaces)
-            const words = text.trim().split(/\s+/);
-
-            // Count the number of words
-            const wordCount = words.length;
-
-            // Update the word count display
-            wordCountDisplay.textContent = `${wordCount} / 1000`;
-
-            // Disable the textarea if the word limit is exceeded
-            if (wordCount > 100) {
-                textarea.value = text.split(/\s+/).slice(0, 100).join(' ');
-                wordCountDisplay.style.color = 'red';
-                textarea.style.borderColor = 'red';
-                textarea.disabled = true;
-            } else {
-                wordCountDisplay.style.color = 'gray';
-                textarea.style.borderColor = '';
-                textarea.disabled = false;
-            }
-        });
-    });
-
-    function doPost(e) {
-  try {
-    var sheet = SpreadsheetApp.openById('YOUR_SPREADSHEET_ID').getActiveSheet();
-    var headers = sheet.getRange(1, 1, 1, sheet.getLastColumn()).getValues()[0];
-    var newRow = [];
-
-    // Get form data
-    var formData = e.parameter;
-
-    // Add emoji IDs to the newRow array
-    newRow.push(formData['emoji1']); // Change 'emoji1' to the appropriate field name
-    newRow.push(formData['emoji2']); // Change 'emoji2' to the appropriate field name
-    newRow.push(formData['emoji3']); // Change 'emoji3' to the appropriate field name
-
-    // Add other form data to the newRow array
-    newRow.push(formData['field1']); // Change 'field1' to the appropriate field name
-    newRow.push(formData['field2']); // Change 'field2' to the appropriate field name
-    newRow.push(formData['field3']); // Change 'field3' to the appropriate field name
-
-    // Add timestamp
-    newRow.push(new Date());
-
-    // Append the newRow array to the sheet
-    sheet.appendRow(newRow);
-
-    // Return success message
-    return ContentService.createTextOutput('Success').setMimeType(ContentService.MimeType.TEXT);
-  } catch (error) {
-    // Handle errors
-    return ContentService.createTextOutput('Error: ' + error.toString()).setMimeType(ContentService.MimeType.TEXT);
-  }
-}
-
-</script>
-
+                // Create table content rows
+                const tbody = document.createElement('tbody');
+                rows.forEach(rowData => {
+                    const rowElement = document.createElement('tr');
+                    rowData.forEach(cellData => {
+                        const cell = document.createElement('td');
+                        cell.textContent = cellData;
+                        rowElement.appendChild(cell);
+                    });
+                    tbody.appendChild(rowElement);
+                });
+                table.appendChild(tbody);
+            })
+            .catch(error => {
+                console.error('Error:', error);
+            });
+    </script>
 </body>
 </html>
