--- a/from.html
+++ b/from.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="logo.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
     <style>
@@ -64,14 +65,14 @@
         }
     </style>
 </head>
-<body>
+<body><br><br><br><br><br><br>
     <div class="login-container">
         <div class="login-header">
             <h2>Login</h2>
         </div>
-        <form>
+        <form onsubmit="return validateLogin()">
             <div class="form-group">
-                <label for="username">Email</label>
+                <label for="username">Username:</label>
                 <input type="text" id="username" name="username" required>
             </div>
             <div class="form-group">
@@ -83,5 +84,23 @@
             </div>
         </form>
     </div>
+    <script>
+        function validateLogin() {
+            // Get the values entered by the user
+            var username = document.getElementById('username').value;
+            var password = document.getElementById('password').value;
+
+            // Check if the username and password are correct
+            if (username === 'admin' && password === 'admin') {
+                // Redirect to the admin.html page
+                window.location.href = 'admin.html';
+                return false; // Prevent form submission
+            } else {
+                // Display an error message
+                alert('Wrong username or password. Please try again.');
+                return false; // Prevent form submission
+            }
+        }
+    </script>
 </body>
 </html>
