--- a/admin.html
+++ b/admin.html
@@ -6,25 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Embedded Google Sheet</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-image: url(background.jpg);
-            background-size: cover;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
+        
 
         .sheet-container {
             background: rgba(255, 255, 255, 0.8);
             padding: 20px;
             border-radius: 5px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-            width: 1150px;
-            height: 70vh;
+            width: cover;
+            height: 800px;
             overflow: auto;
         }
     </style>
