--- a/admin.html
+++ b/admin.html
@@ -6,22 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Embedded Google Sheet</title>
     <style>
-        
-
-        .sheet-container {
+        .container {
+            text-align: center;
             background: rgba(255, 255, 255, 0.8);
             padding: 20px;
             border-radius: 5px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-            width: cover;
+        }
+        .sheet-container {
+            margin-top: 20px;
+            width: 100%;
             height: 800px;
             overflow: auto;
         }
     </style>
 </head>
 <body>
-    <div class="sheet-container">
-        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRUS9fXjkCdoWtfo6q_a2hWx32IEaIvkf2TTLO3EOeWSUfk7kW5EeZx02K_Kw8Fln_V4jKhcdLDd8Gf/pubhtml?gid=0&single=true&widget=false" frameborder="0" width="100%" height="100%"></iframe>
+    <div class="container">
+        <h2>Teacher 1</h2>
+        <div class="sheet-container">
+            <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRUS9fXjkCdoWtfo6q_a2hWx32IEaIvkf2TTLO3EOeWSUfk7kW5EeZx02K_Kw8Fln_V4jKhcdLDd8Gf/pubhtml?gid=0&single=true&widget=false" frameborder="0" width="100%" height="100%"></iframe>
+        </div>
     </div>
 </body>
 </html>
