--- a/c9sC.html
+++ b/c9sC.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up Page</title>
+    <link rel="icon" href="logo.png" type="image/x-icon">
+
 </head>
 <body>
     <style>
